start header layout

--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 <body>
     <div class="layout">
         <div class="header">
-            <div class="search"></div>
-            <div class="searchbar"></div>
-            <div class="notifications"></div>
-            <div class="user-icon"></div>
-            <div class="user-name">Bloke McFace</div>
-            <div class="welcome">Hi there, Bloke McFace (@McBloke)</div>
-            <nav>
-                <ul>
-                    <li>New</li>
-                    <li>Upload</li>
-                    <li>Share</li>
-                </ul>
-            </nav>
+            <div class="header-top">
+                <div class="search">
+                    S
+                    <input type="search">
+                </div>
+                <div class="notifications">B</div>
+                <div class="user-icon">ICON</div>
+                <div class="user-name">Bloke McFace</div>
+            </div>
+            <div class="header-bottom">
+                <div class="welcome">Hi there, Bloke McFace (@McBloke)</div>
+                <nav>
+                    <ul>
+                        <li>New</li>
+                        <li>Upload</li>
+                        <li>Share</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
         <div class="sidebar">
 
