--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <div class="layout">
         <div class="header">
             <div class="header-top">
-                <div class="search">
+                <div>
                     S
                     <input type="search">
                 </div>
-                <div class="notifications">B</div>
-                <div class="user-icon">ICON</div>
-                <div class="user-name">Bloke McFace</div>
+                <div class="push-right">
+                    <div class="notifications">B</div>
+                    <div class="user-icon">ICON</div>
+                    <div class="user-name">Bloke McFace</div>
+                </div>
             </div>
             <div class="header-bottom">
                 <div class="welcome">Hi there, Bloke McFace (@McBloke)</div>
                 <nav>
-                    <ul>
+                    <ul class="push-right">
                         <li>New</li>
                         <li>Upload</li>
                         <li>Share</li>
