--- a/index.html
+++ b/index.html
@@ -9,27 +9,25 @@
 <body>
     <div class="layout">
         <div class="header">
-            <div class="header-top">
-                <div>
-                    S
-                    <input type="search">
-                </div>
-                <div class="push-right">
-                    <div class="notifications">B</div>
-                    <div class="user-icon">ICON</div>
-                    <div class="user-name">Bloke McFace</div>
-                </div>
+            
+            <div class="search">
+                <div>S</div>
+                <input type="search">
             </div>
-            <div class="header-bottom">
-                <div class="welcome">Hi there, Bloke McFace (@McBloke)</div>
-                <nav>
-                    <ul class="push-right">
-                        <li>New</li>
-                        <li>Upload</li>
-                        <li>Share</li>
-                    </ul>
-                </nav>
+
+            <div class="user-info">
+                <div class="notifications">B</div>
+                <div class="user-icon">ICON</div>
+                <div class="user-name">Bloke McFace</div>
             </div>
+
+            <div class="welcome">IMG Hi there, Bloke McFace (@McBloke)</div>
+            <div class="content-buttons">
+                <button class="content-button">New</button>
+                <button class="content-button">Upload</button>
+                <button class="content-button">Share</button>
+            </div>
+
         </div>
         <div class="sidebar">
 
