add projects and announcements layouts

--- a/index.html
+++ b/index.html
@@ -27,13 +27,73 @@
                 <button class="content-button">Upload</button>
                 <button class="content-button">Share</button>
             </div>
-
         </div>
         <div class="sidebar">
-
+            <div class="title">Dashboard</div>
+            <div></div>
+            <div>Home</div>
+            <div>Profile</div>
+            <div>Messages</div>
+            <div>History</div>
+            <div>Tasks</div>
+            <div>Communities</div>
+            <div></div>
+            <div>Settings</div>
+            <div>Support</div>
+            <div>Privacy</div>
         </div>
         <div class="main">
-
+            <div class="projects">
+                <h2>Your Projects</h2>
+                <div class="projects-container">
+                    <div class="project-card">
+                        <h3>Etch-a-Sketch</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis varius risus. Mauris vitae eros tellus. Pellentesque in elementum ante, vel gravida dui. Aliquam a luctus libero, nec iaculis ex.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>Calculator</h3>
+                        <p>Nullam porttitor lobortis commodo. Aenean tristique ligula tristique enim ornare gravida.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>Rat Newsletter Sign up</h3>
+                        <p>Etiam dictum a ipsum nec porta. Donec nisl lacus, ornare non accumsan a, bibendum sit amet enim. Sed eget mollis ligula.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>Why rats are great</h3>
+                        <p>Mauris vitae eros tellus. Pellentesque in elementum ante, vel gravida dui. Aliquam a luctus libero, nec iaculis ex. Suspendisse auctor sem quis tempor vulputate.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>More</h3>
+                        <p>Nulla felis lorem, rutrum nec ante imperdiet, mollis egestas elit.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>To follow</h3>
+                        <p>Proin cursus diam hendrerit purus lobortis, quis auctor enim tempor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <h2>Announcements</h2>
+                <div class="announcements-container">
+                    <div>
+                        <h4>Site Maintenance</h4>
+                        <p>Fusce ornare eros eu faucibus vulputate. Aenean egestas ut enim quis volutpat...</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h4>Community Share Day</h4>
+                        <p>Morbi vitae scelerisque massa, quis iaculis erat. Nullam blandit nisl at nulla hendrerit, et...</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Fusce accumsan placerat ultricies. Curabitur sit amet condimentum odio, nec mollis sapien. Ut congue sed dolor maximus...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending">
+                <h2>Trending</h2>
+            </div>
         </div>
     </div>
 </body>
