add fonts and trending container

--- a/index.html
+++ b/index.html
@@ -93,6 +93,28 @@
             </div>
             <div class="trending">
                 <h2>Trending</h2>
+                <div class="trending-container">
+                    <div class="trending-user">
+                        <img src="" alt="">
+                        <h4 class="user-name">@tegan</h4>
+                        <p class="user-description">World Peace Builder</p>
+                    </div>
+                    <div class="trending-user">
+                        <img src="" alt="">
+                        <h4 class="user-name">@morgan</h4>
+                        <p class="user-description">Super Cool Project</p>
+                    </div>
+                    <div class="trending-user">
+                        <img src="" alt="">
+                        <h4 class="user-name">@kendall</h4>
+                        <p class="user-description">Life Changing App</p>
+                    </div>
+                    <div class="trending-user">
+                        <img src="" alt="">
+                        <h4 class="user-name">@alex</h4>
+                        <p class="user-description">No Traffic Maker</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
