add sidebar svg icons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <div class="layout">
         <div class="header">
-            
             <div class="search">
-                <div>S</div>
+                <img src="bin/img/magnify.svg" alt="magnifying glass icon" class="icon">
                 <input type="search">
             </div>
 
@@ -29,18 +28,37 @@
             </div>
         </div>
         <div class="sidebar">
-            <div class="title">Dashboard</div>
+            <div class="title"><a>
+                <img src="bin/img/view-dashboard.svg" alt="dashboard icon" class="icon">Dashboard
+            </a></div>
             <div></div>
-            <div><a href="#">Home</a></div>
-            <div><a href="#">Profile</a></div>
-            <div><a href="#">Messages</a></div>
-            <div><a href="#">History</a></div>
-            <div><a href="#">Tasks</a></div>
-            <div><a href="#">Communities</a></div>
+            <div><a href="#">
+                <img src="bin/img/home.svg" alt="home icon" class="icon">Home
+            </a></div>
+            <div><a href="#">
+                <img src="bin/img/card-account-details-outline.svg" alt="card icon" class="icon">Profile
+            </a></div>
+            <div><a href="#">
+                <img src="bin/img/message-reply.svg" alt="speech bubble icon" class="icon">Messages
+            </a></div>
+            <div><a href="#">
+                <img src="bin/img/clock-time-three.svg" alt="clock icon" class="icon">History
+            </a></div>
+            <div><a href="#">
+                <img src="bin/img/note-multiple.svg" alt="note stack icon" class="icon">Tasks
+            </a></div>
+            <div><a href="#">
+                <img src="bin/img/account-group.svg" alt="group of people icon" class="icon">Communities
+            </a></div>
             <div></div>
-            <div><a href="#">Settings</a></div>
-            <div><a href="#">Support</a></div>
-            <div><a href="#">Privacy</a></div>
+            <div><a href="#">
+                <img src="bin/img/cog.svg" alt="cog icon" class="icon">Settings
+            </a></div>
+            <div><a href="#">
+                <img src="bin/img/help-box.svg" alt="question mark icon" class="icon">Support
+            </a></div>
+            <div><a href="#"><img src="bin/img/shield-check.svg" alt="shield check icon" class="icon">Privacy
+            </a></div>
         </div>
         <div class="main">
             <div class="projects">
