add and align header icons and avatars

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
             </div>
 
             <div class="user-info">
-                <div class="notifications">B</div>
-                <div class="user-icon">ICON</div>
+                <img src="bin/img/bell-ring-outline.svg" alt="bell icon" class="icon">
+                <img src="bin/img/account-circle.svg" alt="avatar" class="avatar">
                 <div class="user-name">Bloke McFace</div>
             </div>
+            <div>
+                <img src="bin/img/account-circle.svg" alt="avatar orange-filter" class="avatar-large">
+                <div class="welcome">
+                    <p>Hi there, </p>
+                    <h1>Bloke McFace (@McBloke)</h1>
+                </div>
+            </div>
 
-            <div class="welcome">IMG Hi there, Bloke McFace (@McBloke)</div>
             <div class="content-buttons">
                 <button class="content-button">New</button>
                 <button class="content-button">Upload</button>
@@ -28,7 +34,7 @@
             </div>
         </div>
         <div class="sidebar">
-            <div class="title"><a>
+            <div class="title"><a href="#">
                 <img src="bin/img/view-dashboard.svg" alt="dashboard icon" class="icon">Dashboard
             </a></div>
             <div></div>
