fix announcement layout and full page scroll issue

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                         <p>Nullam porttitor lobortis commodo. Aenean tristique ligula tristique enim ornare gravida.</p>
                     </div>
                     <div class="project-card">
-                        <h3>Rat Newsletter Sign up</h3>
+                        <h3>Why rats are great</h3>
                         <p>Etiam dictum a ipsum nec porta. Donec nisl lacus, ornare non accumsan a, bibendum sit amet enim. Sed eget mollis ligula.</p>
                     </div>
                     <div class="project-card">
-                        <h3>Why rats are great</h3>
+                        <h3>Rodent web form</h3>
                         <p>Mauris vitae eros tellus. Pellentesque in elementum ante, vel gravida dui. Aliquam a luctus libero, nec iaculis ex. Suspendisse auctor sem quis tempor vulputate.</p>
                     </div>
                     <div class="project-card">
@@ -102,13 +102,13 @@
                     <div>
                         <h4>Site Maintenance</h4>
                         <p>Fusce ornare eros eu faucibus vulputate. Aenean egestas ut enim quis volutpat...</p>
-                        <hr>
                     </div>
+                    <hr>
                     <div>
                         <h4>Community Share Day</h4>
                         <p>Morbi vitae scelerisque massa, quis iaculis erat. Nullam blandit nisl at nulla hendrerit, et...</p>
-                        <hr>
                     </div>
+                    <hr>
                     <div>
                         <h4>Updated Privacy Policy</h4>
                         <p>Fusce accumsan placerat ultricies. Curabitur sit amet condimentum odio, nec mollis sapien. Ut congue sed dolor maximus...</p>
