--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
                 <h2>Your Projects</h2>
                 <div class="projects-container">
                     <div class="project-card">
-                        <h3>Etch-a-Sketch</h3>
+                        <h3><a href="https://carobel.github.io/odin-etch-a-sketch/">Etch-a-Sketch</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis varius risus. Mauris vitae eros tellus. Pellentesque in elementum ante, vel gravida dui. Aliquam a luctus libero, nec iaculis ex.</p>
                     </div>
                     <div class="project-card">
-                        <h3>Calculator</h3>
+                        <h3><a href="https://carobel.github.io/odin-calculator/">Calculator</a></h3>
                         <p>Nullam porttitor lobortis commodo. Aenean tristique ligula tristique enim ornare gravida.</p>
                     </div>
                     <div class="project-card">
-                        <h3>Why rats are great</h3>
+                        <h3><a href="https://carobel.github.io/odin-landing-page/">Why rats are great</a></h3>
                         <p>Etiam dictum a ipsum nec porta. Donec nisl lacus, ornare non accumsan a, bibendum sit amet enim. Sed eget mollis ligula.</p>
                     </div>
                     <div class="project-card">
-                        <h3>Rodent web form</h3>
+                        <h3><a href="https://carobel.github.io/sign-up-form/">Rodent web form</a></h3>
                         <p>Mauris vitae eros tellus. Pellentesque in elementum ante, vel gravida dui. Aliquam a luctus libero, nec iaculis ex. Suspendisse auctor sem quis tempor vulputate.</p>
                     </div>
                     <div class="project-card">
@@ -118,23 +118,23 @@
             <div class="trending">
                 <h2>Trending</h2>
                 <div class="trending-container">
-                    <div class="trending-user">
-                        <img src="" alt="">
+                    <img src="bin/img/account-circle.svg" alt="person icon" class="avatar">
+                    <div class="trending-user">    
                         <h4 class="user-name">@tegan</h4>
                         <p class="user-description">World Peace Builder</p>
                     </div>
+                    <img src="bin/img/account-supervisor-circle.svg" alt="person icon" class="avatar">
                     <div class="trending-user">
-                        <img src="" alt="">
                         <h4 class="user-name">@morgan</h4>
                         <p class="user-description">Super Cool Project</p>
                     </div>
+                    <img src="bin/img/bank-circle.svg" alt="person icon" class="avatar">
                     <div class="trending-user">
-                        <img src="" alt="">
                         <h4 class="user-name">@kendall</h4>
                         <p class="user-description">Life Changing App</p>
                     </div>
+                    <img src="bin/img/account-group.svg" alt="person icon" class="avatar">
                     <div class="trending-user">
-                        <img src="" alt="">
                         <h4 class="user-name">@alex</h4>
                         <p class="user-description">No Traffic Maker</p>
                     </div>
